Changelog
=========

2.10 (xx.xx.xxxx) - IN DEVELOPMENT
~~~~~~~~~~~~~~~~~

 * Removed support for Python 3.5
 * Reorganised Dockerfile in project template to follow best practices (Tomasz Knapik, Jannik Wempe)
 * Added filtering to locked pages report (Karl Hobley)
 * Adds ability to view a group's users via standalone admin URL and a link to this on the group edit view (Karran Besen)
 * Fix: Ensure link to add a new user works when no users are visible in the users list (LB (Ben Johnston))


2.9 (xx.xx.xxxx) - IN DEVELOPMENT
~~~~~~~~~~~~~~~~

 * Removed support for Django 2.1
 * Added data exports in XLSX and CSV format for reports, ModelAdmin and form submissions (Jacob Topp-Mugglestone)
 * Added support for creating custom reports (Jacob Topp-Mugglestone)
 * Skip page validation when unpublishing a page (Samir Shah)
 * Added `MultipleChoiceBlock` block type for StreamField (James O'Toole)
 * ChoiceBlock now accepts a `widget` keyword argument (James O'Toole)
 * Reduced contrast of rich text toolbar (Jack Paine)
 * Support the rel attribute on custom ModelAdmin buttons (Andy Chosak)
 * Server-side page slug generation now respects `WAGTAIL_ALLOW_UNICODE_SLUGS` (Arkadiusz Michał Ryś)
 * Wagtail admin no longer depends on SiteMiddleware, avoiding incompatibility with Django sites framework and redundant database queries (aritas1, timmysmalls, Matt Westcott)
 * Tag field autocompletion now handles custom tag models (Matt Westcott)
 * `wagtail_serve` URL route can now be omitted for headless sites (Storm Heg)
 * Allow free tagging to be disabled on custom tag models (Matt Westcott)
 * Allow disabling page preview by setting `preview_modes` to an empty list (Casper Timmers)
 * Add Vidyard to oEmbed provider list (Steve Lyall)
 * Optimise compiling media definitions for complex StreamBlocks (pimarc)
 * FieldPanel now accepts a 'heading' argument (Jacob Topp-Mugglestone)
 * Replaced deprecated `ugettext` / `ungettext` calls with `gettext` / `ngettext` (Mohamed Feddad)